--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
 
 .badge-type {
   &-grass {
-    background-color: #a8ff98;
+    background-color: #77b86b;
   }
   &-poison {
     background-color: #d6a2e4;
@@ -18,14 +18,12 @@
   &-water {
     background-color: #8cc4e2;
   }
-  &-electric {
-    background-color: #ffe662;
-  }
+
   &-ice {
     background-color: #8cf5e4;
   }
   &-electric {
-    background-color: #ffe662;
+    background-color: #dac354;
   }
   &-fighting {
     background-color: #da7589;
@@ -40,7 +38,7 @@
     background-color: #ffa5da;
   }
   &-bug {
-    background-color: #bae05f;
+    background-color: #a1c352;
   }
   &-rock {
     background-color: #c9bb8a;
